policies/privileged-containers-with-important-and-critical-fixable-cves.yaml
apiVersion: config.stackrox.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: privileged-containers-with-important-and-critical-fixable-cves
spec:
  categories:
  - Privileges
  - Vulnerability Management
  criteriaLocked: true
  description: Alert on containers running in privileged mode with important or critical
    fixable vulnerabilities
  enforcementActions: []
  eventSource: NOT_APPLICABLE
  exclusions:
  - name: Don't alert on kube-system namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: kube-system
        label: null
    image: null
    expiration: null
  isDefault: false
  lifecycleStages:
  - DEPLOY
  mitreAttackVectors: []
  mitreVectorsLocked: true
  policyName: GitOps - Privileged Containers with Important and Critical Fixable CVEs
  policySections:
  - sectionName: ''
    policyGroups:
    - fieldName: Privileged Container
      booleanOperator: OR
      negate: false
      values:
      - value: 'true'
    - fieldName: Fixed By
      booleanOperator: OR
      negate: false
      values:
      - value: .*
    - fieldName: Severity
      booleanOperator: OR
      negate: false
      values:
      - value: '>= IMPORTANT'
  rationale: Known vulnerabilities make it easier for adversaries to exploit your
    application, and highly-privileged containers pose greater risk. You can fix these
    high-severity vulnerabilities by updating to a newer version of the affected component(s).
  remediation: Use your package manager to update to a fixed version in future builds,
    run your container with lower privileges, or speak with your security team to
    mitigate the vulnerabilities.
  scope: []
  severity: HIGH_SEVERITY
  disabled: false
